# app.ts
@@ -1,10 +1,16 @@
 import express from 'express';
 import { connectToDatabase } from './utils/db';
 import ProjectRouter from './routes/project.router';
-import TaskController from './routes/task.router';
-const swaggerUi=require('swagger-ui-express');
-const swaggerDocument=require('../swagger_output.json');
-const cors=require('cors');
+import TaskRouter from './routes/task.router';
+import AuthRouter from './routes/auth.router';
+import {serve,setup} from 'swagger-ui-express';
+
+
+
+
+const cors = require('cors');   
+// import cors from 'cors';
+
 const app = express();
 const port = 3000;
 
@@ -12,9 +18,10 @@ connectToDatabase();
 app.use(express.json());
 app.use(cors());
 app.use(express.urlencoded({ extended: true }));
-app.use('/Project', ProjectRouter);
-app.use('/Task', TaskController);
-app.use('/swagger',swaggerUi.serve,swaggerUi.setup(swaggerDocument) );
+app.use('/project', ProjectRouter);
+app.use('/task', TaskRouter );
+app.use('/auth',AuthRouter);
+app.use('/swagger',serve,setup(require('../swagger_output.json')) );
 app.get('/', (req, res) => {
     res.send('Hello, Express.js with TypeScript!');
 });
