# swagger_output.json
@@ -5,7 +5,7 @@
     "title": "REST API",
     "description": ""
   },
-  "host": "localhost:3000",
+  "host": "192.168.3.218:3000",
   "basePath": "/",
   "schemes": [
     "http"
@@ -21,7 +21,7 @@
         }
       }
     },
-    "/Project/": {
+    "/project/": {
       "post": {
         "description": "",
         "parameters": [
@@ -51,7 +51,7 @@
         }
       }
     },
-    "/Project/{projectId}": {
+    "/project/{projectId}": {
       "put": {
         "description": "",
         "parameters": [
@@ -103,7 +103,7 @@
         }
       }
     },
-    "/Project/{projectId}/column": {
+    "/project/{projectId}/column": {
       "post": {
         "description": "",
         "parameters": [
@@ -155,7 +155,7 @@
         }
       }
     },
-    "/Project/{projectId}/column/{columnId}": {
+    "/project/{projectId}/column/{columnId}": {
       "put": {
         "description": "",
         "parameters": [
@@ -194,7 +194,7 @@
         }
       }
     },
-    "/Task/": {
+    "/task/": {
       "post": {
         "description": "",
         "parameters": [
@@ -233,7 +233,7 @@
         }
       }
     },
-    "/Task/{taskId}": {
+    "/task/{taskId}": {
       "get": {
         "description": "",
         "parameters": [
@@ -296,6 +296,75 @@
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/auth/login": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/auth/register": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "req": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                },
+                "name": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "409": {
+            "description": "Conflict"
           }
         }
       }
